Configure for DigitalOcean deployment

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 # .env
-SECRET_KEY_DJANGO= 'django-insecure-n^658vq%@_zy%s_h27y09$zh)tk-2$6$1-px-phmb-lalfkhpa'
+SECRET_KEY_DJANGO='django-insecure-n^658vq%@_zy%s_h27y09$zh)tk-2$6$1-px-phmb-lalfkhpa'
+DEBUG=True
+SECURE_SSL_REDIRECT=False
+SITE_DOMAIN=127.0.0.1:8000
 
