CRITICAL: Fix mobile menu & profile design - Professional UI overhaul
🔧 Mobile Menu Fixes:
- Fixed Community dropdown closing entire navbar on mobile
- Improved button layout - full width, better spacing
- Enhanced dropdown visibility with left border accent
- Better touch targets and visual hierarchy

👤 Profile Page Redesign:
- MOVED Follow/Message buttons to top for visibility (CRITICAL)
- Added gradient cards for Activity Statistics
- Redesigned QR section - compact horizontal layout
- Modern social links with brand colors (Telegram, Discord)
- Improved typography with uppercase section titles
- Better spacing and professional card design
- Admin panel button now only visible to staff

🐛 Bug Fixes:
- Mobile navbar dropdown now stays open on Community tap
- Prevented duplicate Follow/Message buttons
- Fixed avatar sizing (avatar-xl support)
- Improved empty state design for posts

📱 Mobile Responsiveness:
- Full-width buttons on mobile (< 576px)
- Better navbar collapse behavior
- Consistent spacing and padding
- Touch-friendly hit targets

🎨 Design Improvements:
- Gradient backgrounds for statistics cards
- Icon-based visual hierarchy
- Modern rounded buttons for social links
- Professional color palette throughout
- Better contrast and readability

--- a/IESA_ROOT/static/manifest.json
+++ b/IESA_ROOT/static/manifest.json
@@ -13,41 +13,18 @@
   "categories": ["sports", "social", "lifestyle"],
   "icons": [
     {
-      "src": "/static/img/icon-72x72.png",
-      "sizes": "72x72",
+      "src": "/static/img/favicon.png",
+      "sizes": "any",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/static/img/icon-96x96.png",
-      "sizes": "96x96",
+      "src": "/static/img/logo.png",
+      "sizes": "any",
       "type": "image/png",
       "purpose": "any"
-    },
-    {
-      "src": "/static/img/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/static/img/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/static/img/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/static/img/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
+    }
+  ],
     {
       "src": "/static/img/icon-384x384.png",
       "sizes": "384x384",
@@ -73,21 +50,6 @@
       "purpose": "maskable"
     }
   ],
-  "screenshots": [
-    {
-      "src": "/static/img/screenshot-540x720.png",
-      "sizes": "540x720",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "platform": "android"
-    },
-    {
-      "src": "/static/img/screenshot-1280x800.png",
-      "sizes": "1280x800",
-      "type": "image/png",
-      "form_factor": "wide"
-    }
-  ],
   "shortcuts": [
     {
       "name": "Профиль",
@@ -96,21 +58,21 @@
       "url": "/users/profile/",
       "icons": [
         {
-          "src": "/static/img/icon-96x96.png",
-          "sizes": "96x96",
+          "src": "/static/img/favicon.png",
+          "sizes": "any",
           "type": "image/png"
         }
       ]
     },
     {
-      "name": "Блог",
-      "short_name": "Блог",
-      "description": "Читать посты",
-      "url": "/blog/",
+      "name": "Посты",
+      "short_name": "Посты",
+      "description": "Просмотр постов сообщества",
+      "url": "/blog/posts/",
       "icons": [
         {
-          "src": "/static/img/icon-96x96.png",
-          "sizes": "96x96",
+          "src": "/static/img/favicon.png",
+          "sizes": "any",
           "type": "image/png"
         }
       ]
@@ -118,12 +80,12 @@
     {
       "name": "События",
       "short_name": "События",
-      "description": "Просмотреть события",
-      "url": "/events/",
+      "description": "Календарь событий",
+      "url": "/blog/events/",
       "icons": [
         {
-          "src": "/static/img/icon-96x96.png",
-          "sizes": "96x96",
+          "src": "/static/img/favicon.png",
+          "sizes": "any",
           "type": "image/png"
         }
       ]
